crates/specforge-cli/tests/snapshots/tests__parity__doctor__cli.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: cli_snap
---
{
  "check": {
    "diagnostics": [],
    "ok": true
  },
  "config": {
    "extensions": [
      "@specforge/software"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n"
  },
  "ok": true,
  "payload": {
    "cache_status": "ok",
    "conflicts": [],
    "credentials": [],
    "credentials_failures": 0,
    "enhancements": {
      "milestone": [
        {
          "edge_types": [],
          "extension": "@specforge/software",
          "fields": [
            "behaviors"
          ]
        }
      ],
      "module": [
        {
          "edge_types": [],
          "extension": "@specforge/software",
          "fields": [
            "ports",
            "ports_defined"
          ]
        }
      ]
    },
    "extensions": [
      {
        "enhancement_count": 2,
        "name": "@specforge/software",
        "source": "builtin",
        "version": "1.0.0"
      }
    ],
    "extensions_ok": true,
    "findings": [],
    "installed_count": 0,
    "ok": true,
    "z3_available": "[Z3]"
  }
}
